--- a/_config.yml
+++ b/_config.yml
@@ -16,11 +16,9 @@
 title: MM
 email:
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-twitter_username: username
-github_username: username
+ Research working papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
+twitter_username: aespinozah
+github_username: alvaroeh
 minimal_mistakes_skin: default
 search: true
 
