--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: MM
 email:
 description: >- # this means to ignore newlines until "baseurl:"
- Research working papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
+ Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: default
