--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Álvaro R.L. Espinoza H.
+email: alvaro.espinozah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
 twitter_username: aespinozah
 github_username: alvaroeh
-minimal_mistakes_skin: default
+minimal_mistakes_skin: dirt
 search: true
 
 # Build settings
@@ -58,7 +58,7 @@ plugins:
 author:
   name   : "First Lastname"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "My awesome biography constrained to a sentence or two goes here."
+  bio    : "Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
