--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ plugins:
 
 author:
   name   : "First Lastname"
-  avatar : "/assets/images/bio-photo.jpg"
+  avatar : "/assets/images/IMG_0144.jpg"
   bio    : "Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H."
   links:
     - label: "Website"
