--- a/_config.yml
+++ b/_config.yml
@@ -13,13 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Álvaro R.L. Espinoza H.
+title: Álvaro R. L. Espinoza H.
 email: alvaro.espinozah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
  Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
+url: "https://alvaroeh.github.io"
+repository: "alvaroeh/alvaroeh.github.io"
 search: true
 
 # Build settings
