--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Research & Consultancy projects' page
 email: alvaro.espinozah@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-Personal page of economist Álvaro R. L. Espinoza H.
+description: Personal page of economist Álvaro R. L. Espinoza H. # this means to ignore newlines until "baseurl:"
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
