--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Research & Consultancy projects
 email: alvaro.espinozah@gmail.com
-description: # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
+Research papers & Consultancy projects' page 
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
