--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Research & Consultancy projects
+title: Research & Consultancy
 email: alvaro.espinozah@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-Research papers & Consultancy projects' page 
+Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
@@ -58,7 +58,7 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Álvaro R. L. Espinoza H."
+  name   : "Álvaro Espinoza Hernández"
   avatar : "/assets/images/IMG_0144.jpg"
   bio    : "Economist, Consultant"
   links:
