--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Research & Consultancy
+title: Research & Consultancy project's page
 email: alvaro.espinozah@gmail.com
 description: Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H. >- # this means to ignore newlines until "baseurl:"
 twitter_username: aespinozah
