--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Research & Consultancy project's page
 email: alvaro.espinozah@gmail.com
-description: Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H. >- # this means to ignore newlines until "baseurl:"
+description: Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
