--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name   : "Álvaro Espinoza Hernández"
   avatar : "/assets/images/IMG_0144.jpg"
-  bio    : "Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H."
+  bio    : "Economics (M.Sc.), Consultant. Research papers & Consultancy projects' personal page"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
