--- a/_config.yml
+++ b/_config.yml
@@ -61,9 +61,9 @@ author:
   avatar : "/assets/images/IMG_0144.jpg"
   bio    : "Economics (M.Sc.), Consultant. Research papers & Consultancy projects' personal page"
   links:
-    - label: "Website"
+    - label: "Updated CV"
       icon: "fas fa-fw fa-link"
-      url: "https://"
+      url: "https://www.dropbox.com/scl/fi/0ptmnabocv3cc6ddxqj7m/cv_eng.pdf?rlkey=y1qto1ysptj9cbsvy27y4sdfs&dl=0"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
