--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Research & Consultancy
 email: alvaro.espinozah@gmail.com
-description: Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H.
+description: Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H. (M.Sc.)
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
@@ -61,18 +61,18 @@ author:
   avatar : "/assets/images/IMG_0144.jpg"
   bio    : "Economics (M.Sc.), Consultant. Research papers & Consultancy projects' personal page"
   links:
-    - label: "Updated CV"
-      icon: "fas fa-fw fa-link"
-      url: "https://www.dropbox.com/scl/fi/0ptmnabocv3cc6ddxqj7m/cv_eng.pdf?rlkey=y1qto1ysptj9cbsvy27y4sdfs&dl=0"
+  #  - label: ""
+  #    icon: "fas fa-fw fa-link"
+  #    url: ""
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+ #   - label: "Instagram"
+ #     icon: "fab fa-fw fa-instagram"
+ #     url: "https://instagram.com/"
 
 footer:
   links:
@@ -82,9 +82,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/"
-    - label: "Instagram"
-      icon: "fab fa-fw fa-instagram"
-      url: "https://instagram.com/"
+ #   - label: "Instagram"
+ #     icon: "fab fa-fw fa-instagram"
+ #     url: "https://instagram.com/"
 
 defaults:
   # _posts
