--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name   : "Álvaro Espinoza Hernández"
   avatar : "/assets/images/IMG_0144.jpg"
-  bio    : "Economics (M.Sc.), Consultant. Development, Agricultural and Applied Economics. Research papers & Consultancy projects' personal page"
+  bio    : "Economics (M.Sc.), Consultant. Development, Agricultural and Applied Economics. Research & Consultancy projects' personal page"
   links:
   #  - label: ""
   #    icon: "fas fa-fw fa-link"
