--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Research & Consultancy
 email: alvaro.espinozah@gmail.com
-description: >
-Research papers & Consultancy projects' page of economist 
-Álvaro R. L. Espinoza H. (M.Sc.)
+description: Research papers & Consultancy projects' page of economist Álvaro R. L. Espinoza H. (M.Sc.)
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
@@ -61,10 +59,8 @@ plugins:
 author:
   name   : "Álvaro Espinoza Hernández"
   avatar : "/assets/images/IMG_0144.jpg"
-  bio    : > 
-  Economics (M.Sc.), Consultant. Development, Agricultural and Applied Economics. 
-  Research & Consultancy projects' personal page
-  email  : alvaro.espinozah@gmail.com
+  bio    : "Economics (M.Sc.), Consultant. Development, Agricultural and Applied Economics. Research & Consultancy projects' personal page"
+  email  : "alvaro.espinozah@gmail.com"
   location: "Santiago, CL"
   links:
   #  - label: ""
