--- a/_config.yml
+++ b/_config.yml
@@ -57,11 +57,12 @@ plugins:
   - jekyll-include-cache
 
 author:
-  name   : "Álvaro Espinoza Hernández"
-  avatar : "/assets/images/IMG_0144.jpg"
-  bio    : - "Economics (M.Sc.), Consultant. Development, Agricultural and Applied Economics."
-           - "Research & Consultancy projects' personal page"
-  email  : "alvaro.espinozah@gmail.com"
+  name: "Álvaro Espinoza Hernández"
+  avatar: "/assets/images/IMG_0144.jpg"
+  bio: 
+   - "Economics (M.Sc.), Consultant. Development, Agricultural and Applied Economics."
+   - "Research & Consultancy projects' personal page"
+  email: "alvaro.espinozah@gmail.com"
   location: "Santiago, CL"
   links:
   #  - label: ""
