--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name: "Álvaro Espinoza Hernández"
   avatar: "/assets/images/IMG_0144.jpg"
-  bio: "Economics (M.Sc.) Consultant. Development, Agricultural and Applied Economics. \n Research & Consultancy projects' personal page"
+  bio: "Economics (M.Sc.)\nDevelopment, Agricultural and Applied Economics.\nResearch & Consultancy projects' personal page"
   email: "alvaro.espinozah@gmail.com"
   location: "Santiago, CL"
   links:
