--- a/_config.yml
+++ b/_config.yml
@@ -59,10 +59,7 @@ plugins:
 author:
   name: "Álvaro Espinoza Hernández"
   avatar: "/assets/images/IMG_0144.jpg"
-  bio: |
-  Economics (M.Sc.)
-  Development, Agricultural and Applied Economics.
-  Research & Consultancy projects' personal page
+  bio: "Economics (M.Sc.). Research & Consultancy projects' *personal page*. Development, Agricultural and Applied Economics."
   email: "alvaro.espinozah@gmail.com"
   location: "Santiago, CL"
   links:
