--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Research & Consultancy
 email: alvaro.espinozah@gmail.com
-description: Research papers & Consultancy projects personal page of economist Álvaro R. L. Espinoza H. (M.Sc.)
+description: Research papers & Consultancy projects personal website of economist Álvaro R. L. Espinoza H. (M.Sc.)
 twitter_username: aespinozah
 github_username: alvaroeh
 minimal_mistakes_skin: dirt
@@ -59,7 +59,7 @@ plugins:
 author:
   name: "Álvaro Espinoza Hernández"
   avatar: "/assets/images/IMG_0144.jpg"
-  bio: "Economics (M.Sc.). Research & Consultancy projects *personal page*. Development, Agricultural and Applied Economics."
+  bio: "Economics (M.Sc.). Research & Consultancy projects *personal page*. Development, Agricultural and Applied Economics. Consultant."
   email: "alvaro.espinozah@gmail.com"
   location: "Santiago, CL"
   links:
