--- a/_config.yml
+++ b/_config.yml
@@ -59,7 +59,7 @@ plugins:
 author:
   name: "Álvaro Espinoza Hernández"
   avatar: "/assets/images/IMG_0144.jpg"
-  bio: "Economics (M.Sc.). Research & Consultancy projects *personal page*. Development, Agricultural and Applied Economics. Consultant."
+  bio: "Economics (M.Sc.). Research & Consultancy projects *personal page*. Development, Agricultural and Applied Economics."
   email: "alvaro.espinozah@gmail.com"
   location: "Santiago, CL"
   links:
