--- a/_config.yml
+++ b/_config.yml
@@ -107,6 +107,13 @@ defaults:
     values:
       layout: single
       author_profile: true
+  # _research
+  - scope:
+      path: "_research"
+      type: pages
+    values:
+      layout: single
+      author_profile: true
 
 category_archive:
   type: liquid
@@ -114,9 +121,3 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
-research_archive:
-  type: liquid
-  path: /research/
-consultancy_archive:
-  type: liquid
-  path: /consultancy/
