--- a/_config.yml
+++ b/_config.yml
@@ -97,9 +97,11 @@ defaults:
       layout: single
       author_profile: true
       read_time: false
+      show_date: true
       comments: true
       share: true
       related: true
+      date_format: "%Y-%m-%d"
   # _pages
   - scope:
       path: "_pages"
