--- a/_config.yml
+++ b/_config.yml
@@ -95,6 +95,7 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: false
       show_date: true
@@ -108,6 +109,7 @@ defaults:
       type: pages
     values:
       layout: single
+      classes: wide
       author_profile: true
 
 category_archive:
